# paper-trail

./: .env.example  .gitignore  BUILD_SPEC.md  CITATION.cff  LICENSE  Makefile  NORTH_STAR.md  PLAN.md  README.md  STRATEGY.md  pyproject.toml
.github/workflows/: ci.yml
eval/: qa_set.example.json  run.py
paper_trail/: cli.py  models.py
paper_trail/ingest/: chunker.py  embedder.py  pdf_parser.py
paper_trail/query/: agent.py  retriever.py
paper_trail/store/: lance.py  qdrant.py
pdfs/: README.md
tests/: test_chunker.py  test_pdf_parser.py  test_store.py
